force-app/main/default/objects/Song__c/fields/Artist__c.field-meta.xml
<CustomField>
    <fullName>Artist__c</fullName>
    <description>Name of the artist.</description>
    <label>Artist</label>
    <length>180</length>
    <required>true</required>
    <type>Text</type>
</CustomField>