force-app/main/default/objects/Song__c/fields/Length_m__c.field-meta.xml
<CustomField>
    <fullName>Length_m__c</fullName>
    <description>Length of the song in minutes.</description>
    <label>Length (m)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>