force-app/main/default/objects/Song__c/fields/Track_Count__c.field-meta.xml
<CustomField>
    <fullName>Track_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of times a song is used as a track.</description>
    <label>Track Count</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>