force-app/main/default/objects/Song__c/fields/Track_Licenses__c.field-meta.xml
<CustomField>
    <fullName>Track_Licenses__c</fullName>
    <description>Number of times CCV is licensed to include the song in a mix.</description>
    <label>Track Licenses</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>