force-app/main/default/objects/Song__c/validationRules/Track_count_limit.validationRule-meta.xml
<ValidationRule>
    <fullName>Track_count_limit</fullName>
    <active>true</active>
    <errorConditionFormula>Track_Count__c  &gt;  Track_Licenses__c</errorConditionFormula>
    <errorMessage>Track count can&#39;t  exceeds the number of available track licenses.</errorMessage>
</ValidationRule>